tests/type-error/inductive-families/Equals2.vix
type Equals a b where
  Refl : Equals a a

f : forall a b. Equals a b
f = Refl
